test/link/script-align-17.out
error: script-align-17.link(2): Cannot align: The alignment (17) must be less than 16
Linking failed with 1 error
