test/link/script-align-17.link
rom0
	align 17, $1234
